# PiEvo

./: .gitignore  LICENSE  README.md  environment.yml  pyproject.toml
config/: model.yaml  task.yaml
pievo/: __init__.py  main.py  server.py
pievo/agents/: __init__.py  abstract.py  experiment.py  hypothesis.py  principle.py  user.py
pievo/group/: evolveflow.py  flowtrack.py  manage.py  notetaker.py  selector.py  theoretical_plots.py
pievo/templates/: index.html
pievo/tools/: __init__.py  tool_demo.py  tool_nanomaterial.py
pievo/utils/: __init__.py  config.py  console.py  process.py
pievo/word/: bayesian.py  embedding.py  extraction.py  instruction.py  utils.py
surrogates/envs/: check_tools.py  config.yaml  environment.yaml  launch.py
surrogates/envs/ChEMBL35/: predict.py
surrogates/envs/ChEMBL35/src/: __init__.py
surrogates/envs/Nanohelix/: predict.py
surrogates/envs/Nanohelix/models/: nanohelix_scaler_X.pkl  nanohelix_scaler_y.pkl  nanohelix_torch_model.pth
surrogates/envs/Nanohelix/src/: models.py
surrogates/envs/Supercon/: predict.py
surrogates/envs/Supercon/models/: best_supercon_model.pth  model_info.txt  supercon_processor.pkl
surrogates/envs/Supercon/src/: data_processor.py  elemental_properties.py  model.py
surrogates/envs/TMC/: predict.py
surrogates/envs/TMC/models/: best_tmc_model.pth  target_scaler.pkl
surrogates/envs/TMC/src/: data_processor.py  evaluator.py  ligands.py  model.py  plotter.py
