[build-system]
requires = ["setuptools>=61.0"]
build-backend = "setuptools.build_meta"

[project]
name = "pievo"
version = "0.1.0"
description = "PiEvo: A Multi-Agent System for Scientific Discovery"
readme = "README.md"
requires-python = ">=3.10"
classifiers = [
    "Programming Language :: Python :: 3",
    "License :: OSI Approved :: MIT License",
    "Operating System :: OS Independent",
]
dependencies = [
    "numpy==1.26.4",
    "pillow",
    "scipy>=1.10.0",
    "scikit-learn>=1.3.0",
    "pydantic>=2.0.0",
    "typing-extensions>=4.5.0",
    "requests>=2.28.0",
    "urllib3>=1.26.0",
    "pyyaml>=6.0",
    "toml>=0.10.0",
    "diskcache>=5.6.0",
    "colorama>=0.4.6",
    "rich>=13.0.0",
    "asyncio-throttle>=1.0.0",
    "ipython>=8.10.0",
    "jupyter>=1.0.0",
    "notebook>=6.5.0",
    "pytest>=7.0.0",
    "pytest-asyncio>=0.21.0",
    "structlog>=23.1.0",
    "autogen-agentchat==0.7.4",
    "autogen-core==0.7.4",
    "autogen-ext[openai]==0.7.4",
    "autogen-ext[docker]==0.7.4",
    "openai>=1.12.0",
    "python-dotenv>=1.0.0",
    "orjson>=3.8.0",
    "aiofiles>=23.0.0",
    "aiohttp>=3.8.0",
    "rdkit>=2024.9.5",
    "watchfiles==1.1.0",
    "flask",
    "pandas",
    "cycler",
    "matplotlib",
    "seaborn",
    "joblib",
    "transformers",
]

[project.scripts]
pievo = "pievo.main:main"

[tool.setuptools.packages.find]
include = ["pievo*"]
